improved class names

--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,17 @@
     <h2 class="headline">CtA - Main conversion - Red Headline</h2>
     <div class="main-conversion--red-headline">
       <div>
-        <h2 class="main-conversion--red-headline__headline">
+        <h2 class="main-conversion__headline">
           A wonderful serenity has taken possessio
         </h2>
-        <p class="main-conversion--red-headline__text">
+        <p class="main-conversion__text">
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="main-conversion--red-headline__btn" onclick="contactToggle2()" href="javascript:void(0);">Link Button</a>
+        <a class="main-conversion__btn" onclick="contactToggle2()" href="javascript:void(0);">Link Button</a>
       </div>
       <img
-        class="main-conversion--red-headline__img"
+        class="main-conversion__img"
         src="mainConversion.png"
       />
     </div>
@@ -47,18 +47,18 @@
     <h2 class="headline">CtA - Secondary conversion</h2>
     <div class="main-conversion--secondary">
       <div>
-        <h2 class="main-conversion--secondary__headline">
+        <h2 class="main-conversion__headline">
           A wonderful serenity has taken possessio
         </h2>
-        <p class="main-conversion--secondary__text">
+        <p class="main-conversion__text">
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="main-conversion--secondary__btn" onclick="contactToggle3()" href="javascript:void(0);">
+        <a class="main-conversion__btn" onclick="contactToggle3()" href="javascript:void(0);">
           Link Button
         </a>
       </div>
-      <img class="main-conversion--secondary__img" src="mainConversion.png" />
+      <img class="main-conversion__img" src="mainConversion.png" />
     </div>
     <div id="contact3" class="contact contact--hidden">
         <p class="contact__headline">Contact us</p>
