class names adjustment

--- a/src/index.html
+++ b/src/index.html
@@ -8,60 +8,57 @@
   </head>
   <body>
     <h2 class="headline">CtA - Main conversion</h2>
-    <div class="main-conversion">
+    <div class="mainConversion">
       <div>
-        <h2 class="main-conversion__headline">
+        <h2>
           A wonderful serenity has taken possessio
         </h2>
-        <p class="main-conversion__text">
+        <p>
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="main-conversion__btn" onclick="contactToggle1()" href="javascript:void(0);">Link Button</a>
+        <a onclick="contactToggle1()" href="javascript:void(0);">Link Button</a>
       </div>
-      <img class="main-conversion__img" src="mainConversion.png" />
+      <img src="mainConversion.png" />
     </div>
     <div id="contact1" class="contact contact--hidden">
       <p class="contact__headline">Contact us</p>
     </div>
     <h2 class="headline">CtA - Main conversion - Red Headline</h2>
-    <div class="main-conversion--red-headline">
+    <div class="mainConversion mainConversion--redHeadline">
       <div>
-        <h2 class="main-conversion__headline">
+        <h2>
           A wonderful serenity has taken possessio
         </h2>
-        <p class="main-conversion__text">
+        <p>
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="main-conversion__btn" onclick="contactToggle2()" href="javascript:void(0);">Link Button</a>
+        <a onclick="contactToggle2()" href="javascript:void(0);">Link Button</a>
       </div>
-      <img
-        class="main-conversion__img"
-        src="mainConversion.png"
-      />
+      <img src="mainConversion.png" />
     </div>
     <div id="contact2" class="contact contact--hidden">
-        <p class="contact__headline">Contact us</p>
-      </div>
+      <p class="contact__headline">Contact us</p>
+    </div>
     <h2 class="headline">CtA - Secondary conversion</h2>
-    <div class="main-conversion--secondary">
+    <div class="mainConversion mainConversion--leftImage">
       <div>
-        <h2 class="main-conversion__headline">
+        <h2>
           A wonderful serenity has taken possessio
         </h2>
-        <p class="main-conversion__text">
+        <p>
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="main-conversion__btn" onclick="contactToggle3()" href="javascript:void(0);">
+        <a onclick="contactToggle3()" href="javascript:void(0);">
           Link Button
         </a>
       </div>
-      <img class="main-conversion__img" src="mainConversion.png" />
+      <img src="mainConversion.png" />
     </div>
     <div id="contact3" class="contact contact--hidden">
-        <p class="contact__headline">Contact us</p>
-      </div>
+      <p class="contact__headline">Contact us</p>
+    </div>
   </body>
 </html>
