--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
       </div>
       <img src="mainConversion.png" />
     </div>
-    <div id="contact1" class="contact contact--hidden">
-      <p class="contact__headline">Contact us</p>
+    <div id="contact1" class="contactToggleBox contactToggleBox--hidden">
+      <p>Contact us</p>
     </div>
     <h2 class="headline">CtA - Main conversion - Red Headline</h2>
     <div class="mainConversion mainConversion--redHeadline">
@@ -38,8 +38,8 @@
       </div>
       <img src="mainConversion.png" />
     </div>
-    <div id="contact2" class="contact contact--hidden">
-      <p class="contact__headline">Contact us</p>
+    <div id="contact2" class="contactToggleBox contactToggleBox--hidden">
+      <p>Contact us</p>
     </div>
     <h2 class="headline">CtA - Secondary conversion</h2>
     <div class="mainConversion mainConversion--leftImage">
@@ -57,8 +57,8 @@
       </div>
       <img src="mainConversion.png" />
     </div>
-    <div id="contact3" class="contact contact--hidden">
-      <p class="contact__headline">Contact us</p>
+    <div id="contact3" class="contactToggleBox contactToggleBox--hidden">
+      <p>Contact us</p>
     </div>
   </body>
 </html>
