--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a onclick="contactToggle1()" href="javascript:void(0);">Link Button</a>
+        <a class="mainConversion__btn" linked-to="contact1" onclick="contactBoxToggle(event)" href="javascript:void(0);">Link Button</a>
       </div>
       <img src="mainConversion.png" />
     </div>
@@ -34,7 +34,7 @@
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a onclick="contactToggle2()" href="javascript:void(0);">Link Button</a>
+        <a class="mainConversion__btn" linked-to="contact2" onclick="contactBoxToggle(event)" href="javascript:void(0);">Link Button</a>
       </div>
       <img src="mainConversion.png" />
     </div>
@@ -51,7 +51,7 @@
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a onclick="contactToggle3()" href="javascript:void(0);">
+        <a class="mainConversion__btn" linked-to="contact3" onclick="contactBoxToggle(event)" href="javascript:void(0);">
           Link Button
         </a>
       </div>
