--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         </p>
         <a class="mainConversion__btn" linked-to="contact1" onclick="contactBoxToggle(event)" href="javascript:void(0);">Link Button</a>
       </div>
-      <img src="mainConversion.png" />
+      <img src="assets/mainConversion.png" />
     </div>
     <div id="contact1" class="contactToggleBox contactToggleBox--hidden">
       <p>Contact us</p>
@@ -36,7 +36,7 @@
         </p>
         <a class="mainConversion__btn" linked-to="contact2" onclick="contactBoxToggle(event)" href="javascript:void(0);">Link Button</a>
       </div>
-      <img src="mainConversion.png" />
+      <img src="assets/mainConversion.png" />
     </div>
     <div id="contact2" class="contactToggleBox contactToggleBox--hidden">
       <p>Contact us</p>
@@ -55,7 +55,7 @@
           Link Button
         </a>
       </div>
-      <img src="mainConversion.png" />
+      <img src="assets/mainConversion.png" />
     </div>
     <div id="contact3" class="contactToggleBox contactToggleBox--hidden">
       <p>Contact us</p>
