--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,17 @@
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="mainConversion__btn" linked-to="contact1" onclick="contactBoxToggle(event)" href="javascript:void(0);">Link Button</a>
+        <a
+          class="mainConversion__btn"
+          linked-to="contact1"
+          onclick="contactBoxToggle(event)"
+          href="javascript:void(0);"
+          >Link Button</a
+        >
       </div>
       <img src="assets/mainConversion.png" />
     </div>
-    <div id="contact1" class="contactToggleBox contactToggleBox--hidden">
+    <div id="contact1" class="contactToggleBox">
       <p>Contact us</p>
     </div>
     <h2 class="headline">CtA - Main conversion - Red Headline</h2>
@@ -34,11 +40,17 @@
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="mainConversion__btn" linked-to="contact2" onclick="contactBoxToggle(event)" href="javascript:void(0);">Link Button</a>
+        <a
+          class="mainConversion__btn"
+          linked-to="contact2"
+          onclick="contactBoxToggle(event)"
+          href="javascript:void(0);"
+          >Link Button</a
+        >
       </div>
       <img src="assets/mainConversion.png" />
     </div>
-    <div id="contact2" class="contactToggleBox contactToggleBox--hidden">
+    <div id="contact2" class="contactToggleBox">
       <p>Contact us</p>
     </div>
     <h2 class="headline">CtA - Secondary conversion</h2>
@@ -51,13 +63,18 @@
           A wonderful serenity has taken possession of my entire soul, like
           these sweet mo
         </p>
-        <a class="mainConversion__btn" linked-to="contact3" onclick="contactBoxToggle(event)" href="javascript:void(0);">
+        <a
+          class="mainConversion__btn"
+          linked-to="contact3"
+          onclick="contactBoxToggle(event)"
+          href="javascript:void(0);"
+        >
           Link Button
         </a>
       </div>
       <img src="assets/mainConversion.png" />
     </div>
-    <div id="contact3" class="contactToggleBox contactToggleBox--hidden">
+    <div id="contact3" class="contactToggleBox">
       <p>Contact us</p>
     </div>
   </body>
