js version with eventListeners

--- a/src/index.html
+++ b/src/index.html
@@ -4,78 +4,89 @@
     <meta charset="UTF-8" />
     <title>title</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <script src="js/main.js"></script>
   </head>
-  <body>
-    <h2 class="headline">CtA - Main conversion</h2>
+  <body id="test">
     <div class="mainConversion">
-      <div>
-        <h2>
-          A wonderful serenity has taken possessio
-        </h2>
-        <p>
-          A wonderful serenity has taken possession of my entire soul, like
-          these sweet mo
-        </p>
-        <a
-          class="mainConversion__btn"
-          linked-to="contact1"
-          onclick="contactBoxToggle(event)"
-          href="javascript:void(0);"
-          >Link Button</a
-        >
+      <h2>CtA - Main conversion</h2>
+      <div class="mainConversion__flexWrapper">
+        <div class="mainConversion__textWrapper">
+          <h3>
+            A wonderful serenity has taken possessio
+          </h3>
+          <p>
+            A wonderful serenity has taken possession of my entire soul, like
+            these sweet mo
+          </p>
+          <a
+            class="mainConversion__btn"
+            linked-to="contact1"
+            onclick="contactBoxToggle(event)"
+            href="javascript:void(0);"
+            >Link Button</a
+          >
+        </div>
+        <img src="assets/mainConversion.png" />
       </div>
-      <img src="assets/mainConversion.png" />
+      <div class="mainConversion__contactToggleBox">
+        <p>Contact us</p>
+      </div>
     </div>
-    <div id="contact1" class="contactToggleBox">
-      <p>Contact us</p>
-    </div>
-    <h2 class="headline">CtA - Main conversion - Red Headline</h2>
+
     <div class="mainConversion mainConversion--redHeadline">
-      <div>
-        <h2>
-          A wonderful serenity has taken possessio
-        </h2>
-        <p>
-          A wonderful serenity has taken possession of my entire soul, like
-          these sweet mo
-        </p>
-        <a
-          class="mainConversion__btn"
-          linked-to="contact2"
-          onclick="contactBoxToggle(event)"
-          href="javascript:void(0);"
-          >Link Button</a
-        >
+      <h2>
+        CtA - Main conversion - Red Headline
+      </h2>
+      <div class="mainConversion__flexWrapper">
+        <div class="mainConversion__textWrapper">
+          <h3>
+            A wonderful serenity has taken possessio
+          </h3>
+          <p>
+            A wonderful serenity has taken possession of my entire soul, like
+            these sweet mo
+          </p>
+          <a
+            class="mainConversion__btn"
+            linked-to="contact2"
+            onclick="contactBoxToggle(event)"
+            href="javascript:void(0);"
+            >Link Button</a
+          >
+        </div>
+        <img src="assets/mainConversion.png" />
       </div>
-      <img src="assets/mainConversion.png" />
+      <div class="mainConversion__contactToggleBox">
+        <p>Contact us</p>
+      </div>
     </div>
-    <div id="contact2" class="contactToggleBox">
-      <p>Contact us</p>
-    </div>
-    <h2 class="headline">CtA - Secondary conversion</h2>
+
     <div class="mainConversion mainConversion--leftImage">
-      <div>
-        <h2>
-          A wonderful serenity has taken possessio
-        </h2>
-        <p>
-          A wonderful serenity has taken possession of my entire soul, like
-          these sweet mo
-        </p>
-        <a
-          class="mainConversion__btn"
-          linked-to="contact3"
-          onclick="contactBoxToggle(event)"
-          href="javascript:void(0);"
-        >
-          Link Button
-        </a>
+      <h2>CtA - Secondary conversion</h2>
+      <div class="mainConversion__flexWrapper">
+        <div class="mainConversion__textWrapper">
+          <h3>
+            A wonderful serenity has taken possessio
+          </h3>
+          <p>
+            A wonderful serenity has taken possession of my entire soul, like
+            these sweet mo
+          </p>
+          <a
+            class="mainConversion__btn"
+            linked-to="contact3"
+            onclick="contactBoxToggle(event)"
+            href="javascript:void(0);"
+          >
+            Link Button
+          </a>
+        </div>
+        <img src="assets/mainConversion.png" />
       </div>
-      <img src="assets/mainConversion.png" />
+      <div class="mainConversion__contactToggleBox">
+        <p>Contact us</p>
+      </div>
     </div>
-    <div id="contact3" class="contactToggleBox">
-      <p>Contact us</p>
-    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
