simplify js code

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>title</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
-  <body id="test">
+  <body>
     <div class="mainConversion">
       <h2>CtA - Main conversion</h2>
       <div class="mainConversion__flexWrapper">
@@ -19,8 +19,6 @@
           </p>
           <a
             class="mainConversion__btn"
-            linked-to="contact1"
-            onclick="contactBoxToggle(event)"
             href="javascript:void(0);"
             >Link Button</a
           >
@@ -47,8 +45,6 @@
           </p>
           <a
             class="mainConversion__btn"
-            linked-to="contact2"
-            onclick="contactBoxToggle(event)"
             href="javascript:void(0);"
             >Link Button</a
           >
@@ -73,8 +69,6 @@
           </p>
           <a
             class="mainConversion__btn"
-            linked-to="contact3"
-            onclick="contactBoxToggle(event)"
             href="javascript:void(0);"
           >
             Link Button
